# evdev-shortcut

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
examples/: listen.rs
src/: keycodes.rs  lib.rs  listener.rs
