[package]
name = "evdev-shortcut"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[dependencies]
evdev = { version = "0.10.1", optional = true }
num_enum = "0.4.3"
parse-display = "0.1.1"
err-derive = "0.2.4"

[dev-dependencies]
test-case = "1.0.0"

[features]
listener = ["evdev"]
default = ["listener"]