[package]
name = "evdev-shortcut"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2021"
description = "Global shortcuts using evdev"
license = "MIT OR Apache-2.0"
repository = "https://github.com/icewind1991/evdev-shortcut"

[dependencies]
evdev = { version = "0.12.1", optional = true, features = ["tokio"] }
futures = { version = "0.3.28", optional = true }
async-stream = { version = "0.3.5", optional = true }
num_enum = "0.6.1"
parse-display = "0.8.1"
thiserror = "1.0.40"
tracing = "0.1.37"

[dev-dependencies]
test-case = "3.1.0"
glob = "0.3.1"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }

[features]
listener = ["evdev", "futures", "async-stream"]
default = ["listener"]